--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -26,8 +26,8 @@
     <%= f.password_field :password_confirmation, autocomplete: "new-password", class: "px-4 flex items-center w-full rounded appearance-none transition duration-300 ease-in-out text-heading text-base focus:outline-none focus:ring-0 border border-border-base focus:border-accent h-10" %>
   </div>
 
-  <div class="flex items-center h-12 p-5 font-semibold leading-none transition duration-300 ease-in-out border border-transparent rounded outline-none actions max-w-fit focus:outline-none focus:shadow focus:ring-1 focus:ring-accent-700 bg-accent text-light hover:bg-accentH">
-    <%= f.submit "Sign up" %>
+  <div>
+    <%= f.submit "Sign up" class: "h-12 p-5 font-semibold leading-none transition duration-300 ease-in-out border border-transparent rounded outline-none actions max-w-fit focus:outline-none focus:shadow focus:ring-1 focus:ring-accent-700 bg-accent text-light hover:bg-accentH" %>
   </div>
 <% end %>
 </div>
