--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -27,7 +27,7 @@
   </div>
 
   <div>
-    <%= f.submit "Sign up" class: "h-12 p-5 font-semibold leading-none transition duration-300 ease-in-out border border-transparent rounded outline-none actions max-w-fit focus:outline-none focus:shadow focus:ring-1 focus:ring-accent-700 bg-accent text-light hover:bg-accentH" %>
+    <%= f.submit "Sign up", class: "py-2 px-3 font-semibold leading-none transition duration-300 ease-in-out border border-transparent rounded outline-none actions max-w-fit focus:outline-none focus:shadow focus:ring-1 focus:ring-accent-700 bg-accent text-light hover:bg-accentH" %>
   </div>
 <% end %>
 </div>
